--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,4 @@
 APP_PORT = 8000
 SESS_SECRET = 346iwdfovmelrkyepirjgskfwiefmwo3kj094fskdflkcvnoijfi2094kd
+ACCESS_TOKEN_SECRET = dgjndjgaheruvnzkjfgh34thsofhwf8r02319upidvinsvjsh48
+REFRESH_TOKEN_SECRET = dlfkgnldkgj40utq394u1iondkjhfq0471028410oijdioqweh1928
